# catppuccin-customize

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
